--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
-<h1>Welcome to My Website!</h1>
-<a href="./public/about.html">About<br /><img src="./assets/images/cat.png" alt="cat" /></a>
-<hr />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Axita's Portfolio</title>
+    </head>
+    <body>
+        <h1>Axita's Portfolio</h1>
+        <h2>I'm a Web Developer</h2>
+        <hr />
+     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+     <img src="./assets/images/movie-ranking.png" alt="movie-ranking Project Preview"/>
+     <h3><a href="./public/birthday-invite.html"></a> </h3>
+     <img src="assets/images/birthday-invite.png" alt="birthday-invite Project Preview"/>
+     <hr />
 
-<!-- Add a link to your contact me page here -->
-<a href="./public/contact.html">Contact Me</a>
+<a href="./public/about.html">About Me</a><br />
+<a href="./public/contact.html">Contact</a>
+    </body>
+</html>
+
+
+
+
+
+
+
